--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ variables:
   DOTNET_VERSION: "6.0"
   GIT_SUBMODULE_STRATEGY: recursive
   NUGET_PACKAGES_DIRECTORY: .nuget
+  PACKAGE_SOURCE_NAME: softozor-packages-gitlab
   TEST_IMAGE_NAME: softozor/hasura-serverless-test
 
 .docker-login: &docker-login
@@ -48,6 +49,7 @@ build:
   variables:
     BASE_DIR: ./
   before_script:
+    - dotnet nuget add source "${CI_API_V4_URL}/projects/198/packages/nuget/index.json" --name ${PACKAGE_SOURCE_NAME}
     - dotnet restore ${BASE_DIR}/faas-templates.sln
   script:
     - dotnet publish -c ${CONFIGURATION} ${BASE_DIR}/faas-templates.sln
