--- a/template/dotnet-hasura/root.csproj
+++ b/template/dotnet-hasura/root.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0-rc.2.21480.10" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
         <PackageReference Include="Softozor.HasuraHandling" Version="1.2.1" />
     </ItemGroup>
 
