--- a/ci/feature-tests/requirements.txt
+++ b/ci/feature-tests/requirements.txt
@@ -1,4 +1,4 @@
--e git+https://github.com/behave/behave@bfda54448906d919ffd3fa4424b6d3c155a5388b#egg=behave
+-e git+https://github.com/behave/behave@v1.2.7.dev2#egg=behave
 faas-client==1.4.21
 jelastic-client==1.3.15
 requests==2.26.0
