try to use the appsettings.json defined in function project

--- a/template/dotnet-hasura/Dockerfile
+++ b/template/dotnet-hasura/Dockerfile
@@ -12,7 +12,6 @@ COPY ./root.csproj  .
 RUN dotnet nuget add source https://gitlab.hidora.com/api/v4/projects/198/packages/nuget/index.json --name "gitlab-softozor-packages" \
     && dotnet restore
 COPY . .
-COPY ./function/appsettings.json .
 RUN dotnet publish -c release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine-amd64
@@ -24,6 +23,7 @@ RUN addgroup --system app \
 
 WORKDIR /app
 COPY --from=builder /app .
+COPY --from=builder /app/function/appsettings.json .
 RUN chown app:app -R /app
 
 USER app
