try to use the appsettings.json defined in function project

--- a/template/dotnet-hasura/Dockerfile
+++ b/template/dotnet-hasura/Dockerfile
@@ -9,10 +9,11 @@ WORKDIR /src/function
 COPY ./function/$FUNCTION_NAME.csproj  ./Function.csproj
 WORKDIR /src
 COPY ./root.csproj  .
+COPY ./function/appsettings.json .
 RUN dotnet nuget add source https://gitlab.hidora.com/api/v4/projects/198/packages/nuget/index.json --name "gitlab-softozor-packages" \
     && dotnet restore
 COPY . .
-RUN dotnet publish -c release -o /app
+RUN rm ./function/appsettings.json && dotnet publish -c release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine-amd64
 
@@ -23,7 +24,6 @@ RUN addgroup --system app \
 
 WORKDIR /app
 COPY --from=builder /app .
-COPY --from=builder /app/function/appsettings.json .
 RUN chown app:app -R /app
 
 USER app
