use the appsettings.json defined in function project

--- a/template/dotnet-hasura/Dockerfile
+++ b/template/dotnet-hasura/Dockerfile
@@ -9,11 +9,10 @@ WORKDIR /src/function
 COPY ./function/$FUNCTION_NAME.csproj  ./Function.csproj
 WORKDIR /src
 COPY ./root.csproj  .
-COPY ./function/appsettings.json .
 RUN dotnet nuget add source https://gitlab.hidora.com/api/v4/projects/198/packages/nuget/index.json --name "gitlab-softozor-packages" \
     && dotnet restore
 COPY . .
-RUN rm ./function/appsettings.json && dotnet publish -c release -o /app
+RUN mv ./function/appsettings.json . && dotnet publish -c release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine-amd64
 
