fix copy of appsettings.json if it exists

--- a/template/dotnet-hasura/Dockerfile
+++ b/template/dotnet-hasura/Dockerfile
@@ -12,8 +12,9 @@ COPY ./root.csproj  .
 RUN dotnet nuget add source https://gitlab.hidora.com/api/v4/projects/198/packages/nuget/index.json --name "gitlab-softozor-packages" \
     && dotnet restore
 COPY . .
-RUN if [ -f ./function/appsettings.json ] ; then mv ./function/appsettings.json . fi
-RUN dotnet publish -c release -o /app
+RUN touch ./function/appsettings.json \
+    && mv ./function/appsettings.json . \
+    && dotnet publish -c release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine-amd64
 
