let the docker image pull pypi packages from nexus

--- a/ci/feature-tests/Dockerfile
+++ b/ci/feature-tests/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.9-alpine AS build
 
+ARG INDEX_URL
 ARG FAAS_CLI_VERSION
 
 COPY ./requirements.txt .
@@ -8,7 +9,7 @@ COPY ./requirements.txt .
 RUN apk add --update curl git \
   && curl -sSL https://github.com/openfaas/faas-cli/releases/download/${FAAS_CLI_VERSION}/faas-cli --output /usr/local/bin/faas-cli \
   && chmod u+x /usr/local/bin/faas-cli \
-  && pip install --no-cache-dir -r requirements.txt
+  && pip install -i $INDEX_URL --no-cache-dir -r requirements.txt
 
 FROM docker:latest
 
