--- a/ci/feature-tests/requirements.txt
+++ b/ci/feature-tests/requirements.txt
@@ -1,3 +1,5 @@
--e git+https://github.com/behave/behave@v1.2.7.dev2#egg=behave
+# -e git+https://github.com/behave/behave@v1.2.7.dev2#egg=behave
+behave==1.2.6
+behave_to_cucumber_json_formatter==0.0.1.dev3+9ffd850
 faas-client==1.4.23
 jelastic-client==7.0.3.1
