--- a/ci/feature-tests/Dockerfile
+++ b/ci/feature-tests/Dockerfile
@@ -3,7 +3,7 @@ ARG DOCKER_REGISTRY=""
 
 FROM ${DOCKER_REGISTRY}python:${PYTHON_VERSION}-alpine AS build
 
-ARG INDEX_URL
+ARG PIP_INDEX_URL
 ARG FAAS_CLI_VERSION
 
 ENV PATH=/venv/bin:$PATH
@@ -15,7 +15,7 @@ RUN apk add --update curl git \
   && curl -sSL https://github.com/openfaas/faas-cli/releases/download/${FAAS_CLI_VERSION}/faas-cli --output /usr/local/bin/faas-cli \
   && chmod u+x /usr/local/bin/faas-cli \
   && python -m venv /venv \
-  && pip install -i $INDEX_URL --no-cache-dir -r requirements.txt
+  && pip install --no-cache-dir -r requirements.txt
 
 FROM ${DOCKER_REGISTRY}docker:latest
 
